# duckdb-parquet

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/ui/: button.tsx  input.tsx  select.tsx
frontend/src/content/: data-table.tsx  downloader.tsx  file-type-selector.tsx  file-uploader.tsx  index.tsx
frontend/src/hooks/: useDBConnection.ts
misc/: .gitignore  pyproject.toml
misc/misc/: main.py
src/: App.tsx  content.tsx  main.tsx
src/components/: file-uploader.tsx  types.ts
src/components/ui/: button.tsx  input.tsx  label.tsx  select.tsx
src/content/: downloader.tsx  file-type-selector.tsx  index.tsx
src/hooks/: useDBConnection.ts
