[tool.poetry]
name = "misc"
version = "0.1.0"
description = ""
authors = ["Eddie Atkinson <45678264+eddie-atkinson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyarrow = "^13.0.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
